--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="LTXGr37tx_ZfRl5V-tnj-uORzZPN8GtTiWojQODxb0g" />
   <title>Green Line Loans Rescheduling Services LLC</title>
   <meta name="description" content="Green Line Loans Rescheduling Services LLC offers expert debt collection, mortgage solutions, and financial consulting across Egypt, Jordan, Lebanon, and the UAE.">
   <link rel="stylesheet" href="style.css">
